--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,27 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "All Products", products_path, class: "navbar-link"%></li>
         </ul>
+
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <% @categories.each do |category| %>
+              <li><%= link_to category.name, categorical_path(category_id: category.id) %></li>
+            <% end %>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Brands<span class="caret"></span></a>
+  <ul class="dropdown-menu">
+    <% @brands.each do |brand| %>
+      <li><%= link_to brand, branding_path(brand: brand) %></li>
+    <% end %>
+      <li><%= link_to 'All', root_path %></li>
+  </ul>
+</li> 
+
+
+
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li class="dropdown">
