--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,6 +16,10 @@
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+<div class="form-group">
+  <%= f.hidden_field :role, value: "guest" %>
+</div>
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
