--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><%= link_to "All Products", products_path, class: "navbar-link"%></li>
+          <li><%= link_to "All Products", root_path, class: "navbar-link"%></li>
         
 
         <li class="dropdown">
@@ -60,19 +60,6 @@
               <li><%= link_to "Sign In", new_user_session_path %></li>
             <% end %>
           </ul>
-      
-          <% if user_signed_in? %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-             
-                @<%= current_user.email %> <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-              </ul>
-            </li>
-          <% end %>
-        </ul>
       </div>
     </div>
   </nav>
