--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,9 @@
       </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "View Cart", view_order_path %></li> <!-- already here -->
+             <li><%= link_to view_order_path do %>
+                <i class="glyphicon glyphicon-shopping-cart"></i></li>
+              <% end %> <!-- already here -->
             <!-- add this code: -->
             <% if user_signed_in? %>
               <li class="dropdown">
@@ -63,10 +65,9 @@
       </div>
     </div>
   </nav>
-	  <body>
-	  	<div class="container">
-	    	<%= yield %>
-	    </div>
-	  </body>
+	  <div class="container">
+  	<%= yield %>
+  </div>
+</body>
 
 </html>
